<resources>
    <string name="app_name">SmartWaiter</string>

    <string name="hello_world">Hello world!</string>

    <!--Inicio Session y Conexion -->
    <string name="ambiente_label">Ambiente</string>
    <string name="usuario_label">Usuario</string>
    <string name="usuario_hint">Ingrese nombre de usuario</string>
    <string name="logo_imageView">Logo</string>
    <string name="contrasena_label">Contraseña</string>
    <string name="contrasena_hint">Ingrese su contraseña</string>
    <string name="compania_label">Compañía</string>
    <string name="conectar">Conectar</string>
    <string name="aceptar">Aceptar</string>
    <!--Inicio Session y Conexion -->

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_tomar_pedido">TomarPedidoActivity</string>
    <!--Menu Opciones - INICIO-->
    <string name="opt_iniciar_dia">Iniciar Periodo</string>
    <string name="opt_sincronizar">Sincronizar Datos</string>
    <string name="opt_reservas">Reservas</string>
    <string name="opt_tomar_pedido">Realizar Pedido</string>
    <string name="opt_pedidos_recoger">Pedidos a Recoger</string>
    <string name="opt_pedido_facturar">Pedidos a Facturar</string>
    <string name="opt_cerrar_dia">Cerrar Periodo</string>
    <string name="opt_usuario">Usuario</string>
    <!--Menu Opciones - FIN-->
    <string name="producto_pedido_label">Producto</string>
    <string name="precio_pedido_label">Precio</string>
    <string name="cantidad_pedido_label">Cantidad</string>
    <string name="sub_total_pedido_label">SubTotal</string>
    <string name="total_pedido_label">Total</string>
    <string name="igv_pedido_label">IGV</string>
    <!--Opciones Toma Pedido - INICIO-->
    <string name="action_delete">Delete</string>
    <string name="action_save_send">Enviar</string>
    <string name="action_save">Guardar</string>
    <string name="action_cancelar_pedido">Cancelar</string>
    <string name="title_activity_mesas">MesasActivity</string>
    <!--Opciones Toma Pedido - FIN-->

    <!-- dialog configurar conexion -->
    <string name="menu_configurar_conex">Configurar Conexión</string>
    <string name="dialog_conf_conexion_title">CONFIGURAR CONEXIÓN</string>
    <string name="dialog_servidor_label">Servidor:</string>
    <string name="dialog_aplicacion_label">Aplicación:</string>
    <string name="dialog_ambiente_label">Ambiente:</string>
    <string name="servidor_hint">Ingrese URL del Servidor</string>
    <string name="aplicacion_hint">Ingrese Aplicación</string>
    <string name="ambiente_hint">Ingrese ambiente</string>
    <string name="cancelar">Cancelar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_login_rapido">LoginRapidoActivity</string>
    <string name="title_activity_iniciar_dia">IniciarDiaActivity</string>
    <string name="iniciarDia">Iniciar Periodo</string>
    <string name="cerrarDia">Cerrar Periodo</string>
    <string name="sincronizar_datos">Sincronizar Datos</string>
    <string name="title_activity_cerrar_dia">Cerrar Dia</string>
    <string name="title_activity_pedidos_arecoger">PedidosARecogerActivity</string>
    <!-- dialog configurar conexion -->


    <string name="alarms_scheduled">Alarms scheduled!</string>
    <string name="notif_title">You got a random number!</string>


    <!--Cabecera pedido a recoger-->
    <string name="nro_pedido_label">Nro</string>
    <string name="nro_piso_label">Mesa-Piso</string>
    <string name="items_label">Items</string>
    <!--Cabecera pedido a recoger-->

    <!--Cabecera pedido a recoger-->
    <string name="item_label">Item</string>
    <string name="articulo_label">Artículo</string>
    <string name="cantidad_label">Cantidad</string>
    <string name="estado_label">Estado</string>
    <!--Cabecera pedido a recoger-->

    <!--Cabecera pedido a recoger-->
    <string name="nro_mesa_fact_label">Mesa</string>
    <string name="nro_piso_fact_label">Piso</string>
    <string name="importe_fact_label">Importe</string>
    <string name="title_activity_mi_layout">MiLayout</string>
    <!--Cabecera pedido a recoger-->

    <string name="dialog_detalle_pedido_title">Detalle Pedido</string>
    <string name="title_activity_consultar_reservas">ConsultarReservasActivity</string>
    <string name="menu_mesas_update">Actualizar</string>
    <string name="menu_pedidos_arecoger_update">Actualizar</string>
    <string name="menu_pedidos_arecoger_settings">Configurar</string>
</resources>
