<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/iniciar"
            android:icon="@drawable/ic_action_inicio"
            android:orderInCategory="0"
            android:title="@string/opt_iniciar_dia"/>
        <item
            android:id="@+id/sincronizar"
            android:icon="@drawable/ic_action_sincro"
            android:orderInCategory="1"
            android:title="@string/opt_sincronizar"/>
        <item
            android:id="@+id/reservas"
            android:icon="@drawable/ic_action_reserva"
            android:orderInCategory="2"
            android:title="@string/opt_reservas"/>
        <item
            android:id="@+id/pedido"
            android:icon="@drawable/ic_action_tomar_pedido"
            android:orderInCategory="3"
            android:title="@string/opt_tomar_pedido"/>
        <item
            android:id="@+id/recoger"
            android:icon="@drawable/ic_action_recoger"
            android:orderInCategory="4"
            android:title="@string/opt_pedidos_recoger"/>
        <item
            android:id="@+id/facturar"
            android:icon="@drawable/ic_action_facturar"
            android:orderInCategory="5"
            android:title="@string/opt_pedido_facturar"/>
        <item
            android:id="@+id/cerrar"
            android:icon="@drawable/ic_action_cierre"
            android:orderInCategory="6"
            android:title="@string/opt_cerrar_dia"/>
        <item
            android:id="@+id/usuario"
            android:icon="@drawable/ic_cambiar_usuario"
            android:orderInCategory="7"
            android:title="@string/opt_usuario"/>
    </group>
</menu>