<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="250dp"
                android:paddingRight="250dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.neversoft.smartwaiter.ui.LoginRapidoActivity">

    <ImageView
        android:id="@+id/syncRapidoImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_imageView"
        android:src="@drawable/ic_settings"/>

    <TextView
        android:id="@+id/usuarioRapidoLabel"
        style="@style/Label"
        android:layout_below="@+id/syncRapidoImageView"
        android:text="@string/usuario_label"/>

    <TextView
        android:id="@+id/usuarioRapidoTextView"
        style="@style/TextView"
        android:layout_below="@+id/usuarioRapidoLabel"/>

    <TextView
        android:id="@+id/contrasenaRapidoLabel"
        style="@style/Label"
        android:layout_below="@+id/usuarioRapidoTextView"
        android:text="@string/contrasena_label"/>

    <EditText
        android:id="@+id/contrasenaRapidoEditText"
        style="@style/CajaTexto"
        android:layout_below="@+id/contrasenaRapidoLabel"
        android:hint="@string/contrasena_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/companiaRapidoLabel"
        style="@style/Label"
        android:layout_below="@+id/contrasenaRapidoEditText"
        android:text="@string/compania_label"/>

    <TextView
        android:id="@+id/companiaRapidoTextView"
        style="@style/TextView"
        android:layout_below="@+id/companiaRapidoLabel"/>

    <Button
        android:id="@+id/aceptarRapidoButton"
        style="@style/Boton"
        android:layout_alignParentBottom="true"
        android:text="@string/aceptar"/>

</RelativeLayout>
