<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/cabeceraPedidoFacturar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nroPedidoLabel"
            style="@style/LabelContracted"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/nro_pedido_label"/>

        <TextView
            android:id="@+id/nroMesaPedidoLabel"
            style="@style/LabelContracted"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/nro_mesa_fact_label"/>

        <TextView
            android:id="@+id/nroPisoPedidoLabel"
            style="@style/LabelContracted"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/nro_piso_fact_label"/>

        <TextView
            android:id="@+id/importePedidoLabel"
            style="@style/LabelContracted"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="@string/importe_fact_label"/>
    </LinearLayout>

    <ListView
        android:id="@+id/cabeceraPedidoFacturarListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cabeceraPedidoFacturar"
        android:layout_margin="5dp"
        android:background="@android:color/holo_blue_dark"
        android:divider="@android:color/black"
        android:dividerHeight="1dp"
        tools:listitem="@layout/pedido_cab_facturar_item">
    </ListView>
</RelativeLayout>
