<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:layout_alignParentTop="true"
        android:elevation="@dimen/appbar_elevation"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <ImageView
        android:id="@+id/app_logo_imageview"
        android:layout_width="match_parent"
        android:layout_height="?attr/listPreferredItemHeightSmall"
        android:layout_below="@+id/toolbar"
        android:background="@color/primary"
        android:contentDescription="@string/app_name"
        android:elevation="@dimen/appbar_elevation"
        android:scaleType="center"
        android:src="@drawable/ic_logo"/>

    <!-- This view is used to provide the area that is overlapped
         as well as the anchor point that the weather detail will
         use to overlap the "appbar" -->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/form_app_bar_overlap_large"
        android:layout_below="@id/app_logo_imageview"
        android:background="@color/primary"
        android:elevation="@dimen/appbar_elevation"/>

    <android.support.v7.widget.CardView
        android:id="@+id/form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_logo_imageview"
        android:layout_marginLeft="@dimen/form_horizontal_margin_large"
        android:layout_marginRight="@dimen/form_horizontal_margin_large"
        app:cardElevation="@dimen/form_card_elevation"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
            android:paddingEnd="@dimen/waiter_detail_horizontal_padding"
            android:paddingLeft="@dimen/waiter_detail_horizontal_padding"
            android:paddingRight="@dimen/waiter_detail_horizontal_padding"
            android:paddingStart="@dimen/waiter_detail_horizontal_padding"
            android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
            tools:context="com.neversoft.smartwaiter.ui.LoginActivity">

            <TextView
                android:id="@+id/usuarioLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usuario_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <EditText
                android:id="@+id/usuarioEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary_text"
                android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
                android:hint="@string/usuario_hint"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <TextView
                android:id="@+id/contrasenaLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"

                android:text="@string/contrasena_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <EditText
                android:id="@+id/contrasenaEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
                android:hint="@string/contrasena_hint"
                android:textColor="@color/secondary_text"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <TextView
                android:id="@+id/companiaLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
                android:text="@string/compania_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <Spinner
                android:id="@+id/companiaSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary_text"
                android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
                android:spinnerMode="dropdown"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

            <Button
                android:id="@+id/iniciarSessionButton"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
                android:text="@string/conectar"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:theme="@style/BrandButtonStyle"/>

            <Button
                android:id="@+id/aceptarButton"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
                android:text="@string/aceptar"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:theme="@style/BrandButtonStyle"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>
