<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools">

    <include
        layout="@layout/screen_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/cabeceraPedido"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:background="@color/detail_accent_pane_background"
            android:minHeight="?android:attr/listPreferredItemHeightSmall"
            android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material">

            <TextView
                android:id="@+id/productoPedidoLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:text="@string/producto_pedido_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/cantidadPedidoLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.5"
                android:gravity="center_horizontal"
                android:text="@string/cantidad_pedido_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/precioPedidoLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.5"
                android:gravity="right|center_vertical"
                android:text="@string/precio_pedido_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white"/>
        </LinearLayout>


        <ListView
            android:id="@+id/detallePedidoListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:divider="@android:color/black"
            android:dividerHeight="1dp"
            tools:listitem="@layout/order_item">
        </ListView>


        <android.support.v7.widget.GridLayout
            android:id="@+id/footerPedido"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/detail_accent_pane_background"
            android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
            app:columnCount="3">

            <TextView
                android:id="@+id/subTotalPedidoLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/sub_total_pedido_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white"
                app:layout_columnWeight="2"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"/>

            <TextView
                android:id="@+id/subTotalPedidoTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white"
                app:layout_columnWeight="2"
                app:layout_gravity="fill"/>

            <TextView
                android:id="@+id/TotalPedidoLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:text="@string/total_pedido_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white"
                app:layout_columnWeight="2"
                app:layout_gravity="fill"/>


            <TextView
                android:id="@+id/igvPedidoLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/igv_pedido_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white"
                app:layout_columnWeight="2"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"/>

            <TextView
                android:id="@+id/igvPedidoTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white"
                app:layout_columnWeight="2"
                app:layout_gravity="fill"/>

            <TextView
                android:id="@+id/totalPedidoTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white"
                app:layout_columnWeight="2"
                app:layout_gravity="fill"/>

        </android.support.v7.widget.GridLayout>

    </LinearLayout>

</merge>
